compiler/tests/compiler/must_fail/t_26.mil.exp.err
Parsing tests/compiler/must_fail/t_26.mil as MIL

tests/compiler/must_fail/t_26.mil:4:10: 4:11 error: return storage type for x wrong
  return x;
         ^^
tests/compiler/must_fail/t_26.mil:3:32: 3:40 error: <-- return storage declared here
extern fn test(x : reg u64) -> stack u64 {
                               ^^^^^^^^^
tests/compiler/must_fail/t_26.mil:3:16: 3:17 error: <-- variable declared here
extern fn test(x : reg u64) -> stack u64 {
               ^^
