compiler/tests/compiler/must_fail/t_26.mil
// wrong return storage type

extern fn test(x : reg u64) -> stack u64 {
  return x;
}

/*
START:CMD
ARG="renumber_fun_unique,typecheck"
END:CMD
*/
